Closed Bug 501004 Opened 15 years ago Closed 15 years ago

--enable-canvas3d fails to build with gcc 4.3.3

Categories

(Core :: Graphics: Canvas2D, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

Attachments

(1 file)

I added the following line into my .mozconfig:
ac_add_options --enable-canvas3d

ACTUAL RESULT
content/canvas/src/nsCanvasRenderingContextGL.cpp:446: error: extra ';'
content/canvas/src/nsCanvasRenderingContextGL.cpp:447: error: extra ';'
...

Also, a significant compile warning:
content/canvas/src/nsCanvasRenderingContextGLWeb20.cpp:1732: warning: 'rv' may be used uninitialized in this function

Patch coming up...
Attached patch Patch rev. 1Splinter Review
Attachment #385644 - Flags: review?(vladimir)
Comment on attachment 385644 [details] [diff] [review]
Patch rev. 1

That works, thanks!
Attachment #385644 - Flags: review?(vladimir) → review+
http://hg.mozilla.org/mozilla-central/rev/4f95964a8c7d

-> FIXED
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: