Fix --enable-canvas3d build error with gcc 4.3.3.  b=501004 r=vlad